[workspace]
name = "ppaass-v4"
version = "0.1.0"
edition = "2024"
resolver = "3"
members = ["agent", "proxy", "rpc"]

[workspace.dependencies]
tokio = "1.46.1"
tonic = "0.13.1"
tonic-build = "0.13.1"
uuid = "1.17.0"
rand = "0.9.1"
deadpool = "0.12.2"
thiserror = "2.0.12"
bincode = "2.0.1"
aes = "0.8.1"
blowfish = "0.9.1"
rsa = "0.9.8"
cipher = "0.4.4"
cbc = "0.1.2"
block-padding = "0.3.3"
spki = "0.7.3"
pkcs8 = "0.10.2"
bytes = "1.10.1"
toml = "0.9.2"
serde = "1.0.219"
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-appender = "0.2.3"
prost = "0.13.5"
prost-build = "0.14.1"

