[workspace]
name = "ppaass-v4"
version = "0.1.0"
edition = "2024"
resolver = "3"
members = ["common", "proxy", "rpc"]

[workspace.dependencies]
tokio = "1.46"
tonic = "0.13"
tonic-build = "0.13"
uuid = "1.17.0"
rand = "0.9"
deadpool = "0.12"
thiserror = "2.0"
bincode = "2.0"
aes = "0.8"
blowfish = "0.9"
rsa = "0.9"
cipher = "0.4"
cbc = "0.1"
block-padding = "0.3"
spki = "0.7"
pkcs8 = "0.10"
bytes = "1.10"
toml = "0.9"
serde = "1.0"
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
prost = "0.13"
prost-build = "0.14"
itertools = "0.14"
strum = "0.27"
chrono = "0.4"
futures-util = "0.3.31"
dashmap = "6.1.0"


