[workspace]
resolver = "3"
members = ["agent", "common", "crypto", "protocol", "proxy"]
[workspace.dependencies]
tokio = "1.47"
tokio-util = "0.7"
serde = "1.0"
bytes = "1.10"
thiserror = "2.0"
bincode = "2.0"
tracing = "0.1"
chrono = "0.4"
toml = "0.9"
rand = "0.9"
aes = "0.8"
blowfish = "0.9"
rsa = "0.9"
cipher = "0.4"
cbc = "0.1"
block-padding = "0.3"
spki = "0.7"
pkcs8 = "0.10"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
futures-util = "0.3"
hyper = "1.6"
hyper-util = "0.1"
http-body-util = "0.1"
tower = "0.5"
fast-socks5 = "1.0.0-rc.0"
clap = "4.5"


