[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[dependencies]
ppaass-rpc = { path = "../rpc", package = "rpc" }
tonic = { workspace = true, features = ["gzip"] }
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true, features = ["v4"] }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio-stream = { workspace = true }
prost = { workspace = true }