[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
protocol = { path = "../protocol" }
crypto = { path = "../crypto" }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["codec", "io"] }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["chrono"] }
rand = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
bincode = { workspace = true }
futures-util = { workspace = true, features = ["sink"] }
