[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
ppaass-protocol = { path = "../protocol", package = "protocol" }
ppaass-crypto = { path = "../crypto", package = "crypto" }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["codec", "io"] }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["chrono", "env-filter"] }
rand = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
futures-util = { workspace = true, features = ["sink"] }

