[package]
name = "proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
ppaass-rpc = { path = "../rpc", package = "rpc" }
ppaass-common = { path = "../common", package = "common" }
tokio = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
tracing = { workspace = true }
tonic = { workspace = true }
dashmap = { workspace = true }