[package]
name = "proxy"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ppaass-proxy"

[dependencies]
protocol = { path = "../protocol" }
common = { path = "../common" }
crypto = { path = "../crypto" }
common-macro = { path = "../common-macro" }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
toml = { workspace = true, features = ["parse"] }
tracing = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
tokio-util = { workspace = true, features = ["codec", "io"] }
futures-util = { workspace = true, features = ["sink"] }
bincode = { workspace = true }
clap = { workspace = true, features = ["derive"] }
